feat: add search and improve performances summaries
